--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [workspace]
 resolver = "2"
 members = [
-	"client",
-	"client/cli",
-	"metrics",
-	"periodic",
-	"primitives",
-	"relayer",
+    "client",
+    "client/cli",
+    "metrics",
+    "periodic",
+    "primitives",
+    "relayer",
 ]
 
 [profile.release]
@@ -24,11 +24,11 @@ repository = "https://github.com/bifrost-platform/bifrost-relayer.rs"
 log = "0.4.20"
 env_logger = "0.10.0"
 sentry = { version = "0.31.7", default-features = false, features = [
-	"reqwest",
-	"rustls",
-	"backtrace",
-	"contexts",
-	"panic",
+    "reqwest",
+    "rustls",
+    "backtrace",
+    "contexts",
+    "panic",
 ] }
 
 async-trait = "0.1.73"
@@ -39,13 +39,13 @@ chrono = "0.4.31"
 thiserror = "1.0.49"
 futures = "0.3.28"
 reqwest = { version = "0.11.22", default-features = false, features = [
-	"rustls-tls",
-	"json",
+    "rustls-tls",
+    "json",
 ] }
 rand = "0.8.5"
 lazy_static = "1.4.0"
 
-serde_yaml = "0.9.25"
+serde_yaml = "0.9.27"
 serde = "1.0.188"
 serde_json = "1.0.107"
 
@@ -58,14 +58,14 @@ tokio = "1.33.0"
 tokio-stream = "0.1.14"
 
 # Substrate Client
-sc-cli = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.43" }
-sc-utils = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.43" }
-sc-service = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.43" }
-sc-sysinfo = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.43" }
-prometheus-endpoint = { package = "substrate-prometheus-endpoint", default-features = false, git = "https://github.com/bifrost-platform/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43" }
+sc-cli = { git = "https://github.com/alstjd0921/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.43-with-R" }
+sc-utils = { git = "https://github.com/alstjd0921/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.43-with-R" }
+sc-service = { git = "https://github.com/alstjd0921/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.43-with-R" }
+sc-sysinfo = { git = "https://github.com/alstjd0921/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.43-with-R" }
+prometheus-endpoint = { package = "substrate-prometheus-endpoint", default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
 
 # Substrate Builds
-substrate-build-script-utils = { git = "https://github.com/bifrost-platform/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.43" }
+substrate-build-script-utils = { git = "https://github.com/alstjd0921/bifrost-substrate", default-features = false, branch = "bifrost-polkadot-v0.9.43-with-R" }
 
 [profile.production]
 inherits = "release"
